# grounded-memory

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: RELEASE.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
demos/: demo_bitemporal.py  demo_healthcare_data.py  demo_interactive.py  demo_multi_patient_retrieval.py  demo_multi_patient_write.py  demo_openrouter.py
docs/: README.md
docs/api/: API_REFERENCE.md
docs/architecture/: ARCHITECTURE.md  CONSTRAINT_LEARNING_LOOP.md  CONSTRAINT_LEARNING_QUICK_REF.md  CONSTRAINT_LEARNING_SUMMARY.md  EXTERNAL_KB_INTEGRATION.md  GMEM_V2_BLUEPRINT.md  HYBRID_ARCHITECTURE.md  MIDDLEWARE_ARCHITECTURE.md  SYSTEM_DEFINITION.md
docs/sdk/: HPC_DEPLOYMENT.md  IMPORT_SURFACE.md  OPTIMIZATION_GUIDE.md  SDK_REFERENCE.md
scripts/: healthcare_backend_smoke.py  hpc_mem0_smoke.py  initialize_healthcare_kb.py  pod_memory_demo.py  pod_simple_use.py  setup_database.py  smoke_and_inspect_backends.py  test_full_pipeline.sh
src/gmem/: __init__.py  service.py
src/grounded_memory/: __init__.py  logging_utils.py  memory.py  system.py
src/grounded_memory/adapters/: __init__.py  base_agent.py  discovery.py  generic_agent.py  identity_service.py  registry.py  result.py  seeds.py
src/grounded_memory/configs/: engineering_constraints.yaml  finance_constraints.yaml  generic_constraints.yaml  healthcare_constraints.yaml  healthcare_kb.yaml  legal_constraints.yaml  llm_config.yaml  neo4j_config.yaml
src/grounded_memory/core/: __init__.py  conflict_resolution.py  constraints.py  entity_identity.py  grounding.py  hybrid_store.py  intent.py  models.py  neo4j_store.py  postgres_hybrid_store.py  postgres_store.py  store.py  system.py  tuple_normalization.py
src/grounded_memory/llm/: __init__.py  client.py  extractor.py  prompts.py
src/grounded_memory/retrieval/: __init__.py  graph.py
src/grounded_memory/service/: __init__.py  (+2 more)
tests/: test_adapters.py  test_end_to_end.py  test_governance.py  test_healthcare_reconciliation.py  test_healthcare_retrieval.py  test_hybrid_storage.py  test_memory_layer.py  test_postgres_storage.py
(+13 files in other folders)
